--- a/Team 2_Mini Project/index.html
+++ b/Team 2_Mini Project/index.html
@@ -14,11 +14,11 @@
 
 <body>
   <header>
-    <div id="grid">
+    <div id="grid_index">
       <div><img id="home_button" src="img/CollogeSymbol.jpg" href="#"></div>
       <div class="titletext"><h1>KUMATCH</div></h1>
       <div id="login_choice">
-          <a href="login_ver1.html" onclick="">로그인</a>
+            <a href="login_ver1.html" onclick="">로그인</a>
           <span id=login_or>또는</span>
           <a href="signup_form" onclick="">회원가입</a>
       </div>
