팀관리 link연결
팀관리페이지 링크연결

--- a/2조_미니프로젝트_0721_ver1/Team 2_Mini Project/notification_board.html
+++ b/2조_미니프로젝트_0721_ver1/Team 2_Mini Project/notification_board.html
@@ -47,7 +47,7 @@
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a><br><br><br>
           <div id="match_condition"><a href="#"><img id="football_img" src="img/football.png">  나의 경기 현황</a></div><br><br>
           <div id="modify_my_info"><a href="#"><img id="settings_img" src="img/settings.png">  정보 수정</a></div><br><br>
-          <div id="manage_team"><a href="#"><img id="team_img" src="img/team.png">  팀 관리</a></div><br><br>
+          <div id="manage_team"><a href="team_manage.html"><img id="team_img" src="img/team.png">  팀 관리</a></div><br><br>
           <div id="sns"><a href="https://www.instagram.com/" target="_blank"><img id="instagram_img" src="img/instagram.png"></a>
                         <a href="https://www.facebook.com/" target="_blank"><img id="facebook_img" src="img/facebook.png"></a></div>
           <div id="logo" style="text-align:center; font-family:KorUB; font-size:40px; color:#8B2331;">KUMATCH</a>
