나의 경기 현황 추가
경기현황 link

--- a/2조_미니프로젝트_0721_ver1/Team 2_Mini Project/basic_layout.html
+++ b/2조_미니프로젝트_0721_ver1/Team 2_Mini Project/basic_layout.html
@@ -48,7 +48,7 @@
       <aside>
         <div id="mySidenav" class="sidenav">
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a><br><br><br>
-          <div id="match_condition"><a href="#"><img id="football_img" src="img/football.png">  나의 경기 현황</a></div><br><br>
+          <div id="match_condition"><a href="my_matchlist.html"><img id="football_img" src="img/football.png">  나의 경기 현황</a></div><br><br>
           <div id="modify_my_info"><a href="#"><img id="settings_img" src="img/settings.png">  정보 수정</a></div><br><br>
           <div id="manage_team"><a href="team_manage.html"><img id="team_img" src="img/team.png">  팀 관리</a></div><br><br>
           <div id="sns"><a href="https://www.instagram.com/" target="_blank"><img id="instagram_img" src="img/instagram.png"></a>
@@ -119,7 +119,7 @@
             </div>
             <button id="prev-btn">prev</button>
             <button id="next-btn">next</button>
-            <span><a href="#"><input type="button" id="match_register" name="match_register" value="매치 등록하기"></a></span>
+            <span><a href="my_matchlist.html"><input type="button" id="match_register" name="match_register" value="매치 등록하기"></a></span>
         </section>
         <script src="js/slide_1.js"></script></div>
   </div>
