notification_board, sign_up, login_ver1.html 수정

--- a/2조_미니프로젝트_0721_ver1/Team 2_Mini Project/login_ver1.html
+++ b/2조_미니프로젝트_0721_ver1/Team 2_Mini Project/login_ver1.html
@@ -38,11 +38,11 @@
         <form action="#" method="post">
           <div class="input_email">
             <label style="font-size:15px;">ID 또는 이메일</label><br>
-            <input type="text" id="username" name="username" value=""><br><br><br>
+            <input type="email" id="username" name="username" placeholder="@korea.ac.kr" style="font-size:15px;"><br><br><br>
           </div>
           <div class="input_pw">
             <label style="font-size:15px;">비밀번호</label><br>
-            <input type="text" id="password"name="password" value=""><br><br><br><br>
+            <input type="password" id="password"name="password" placeholder="PW"><br><br><br><br>
           </div>
           <input type="submit" name="login_button" id="login_button" value="로그인"><br><br><br>
       </form>
@@ -51,13 +51,13 @@
         <form class="" action="basic_layout.html" method="post">
         <table width="430" align ="center">
           <tr>
-            <td><li>비밀번호가 기억나지 않으신가요?</li></td>
+            <td>비밀번호가 기억나지 않으신가요?</td>
             <td align="center"><input type="submit" name="find_pw" id="find_pw" value="비밀번호찾기"></td>
           </tr>
         </form>
         <form class="" action="sign_up.html" method="post">
           <tr>
-            <td><li>아직 회원이 아니신가요?</li></td>
+            <td>아직 회원이 아니신가요?</td>
             <td align="center"><input type="submit" name="sign_up" id="sign_up" value="회원가입"></td>
           </tr>
         </table>
@@ -88,9 +88,7 @@
     </script>
     </div>
   </aside>
-</div
-
-<div id="team_button"><input type="button" name="team_but1" value="팀 만들기"> </div>
+</div>
 
   <footer>
     <br><br>
