--- a/2조_미니프로젝트_0721_ver1/Team 2_Mini Project/notification_board.html
+++ b/2조_미니프로젝트_0721_ver1/Team 2_Mini Project/notification_board.html
@@ -6,18 +6,10 @@
     <title>KUMATCH_notification</title>
     <link rel="stylesheet" href="css/basic_layout_style.css">
     <link rel="stylesheet" href="css/image_slide_index_style.css">
-    <link rel="stylesheet" href="css/login_style.css">
+    <link rel="stylesheet" href="css/notification_board_style.css">
     <link rel="stylesheet" href="KU_B/font.css">
     <link rel="stylesheet" href="KU_L/font.css">
     <link rel="stylesheet" href="KU_M/font.css">
-
-    <style media="screen">
-      #center_line{
-        border-left: 2px solid #C7B9AB;
-        margin-top: 70px;
-        margin-left : -50px;
-      }
-    </style>
   </head>
 
   <body>
@@ -65,8 +57,8 @@
        </div>
       </aside>
 
-      <nav id="grid_login">
-        <img id="aside_img_login" src="img/dog_ball.jpg">
+      <article id="grid_notification">
+        <img id="aside_img_notification" src="img/dog_ball.jpg">
         <div id="center_line">
           <div id="notification_main">
            <h2 style="  font-family: KorUL; color :#8B2331; margin-top : 50px; margin-left:50px; font-size : 40px;">공지사항</h2><br>
@@ -94,7 +86,17 @@
             </table>
           </div>
         </div>
-    </nav>
+    </article>
+  </div>
+
+  <footer style="font-size:15px;">
+    <br><br>
+    <span>[30019] 세종특별자치시 세종로 2511 고려대학교 세종캠퍼스</span>
+    <span> T. 044-860-1114</span>
+    <span> F. 044-860-1048</span>
+      <p style="color:#C7B9AB;">Copyright ⓒ <span style="color:#FF661B;">KOREA University Sejong Campus</span> All Rights Reserved</p>
+  </footer>
+
 
 
   </body>
