매치신청게시판, 회원가입 유효성 끝
basic_layout에서 링크연결 필요

--- a/2조_미니프로젝트_0721_ver1/Team 2_Mini Project/match_register.html
+++ b/2조_미니프로젝트_0721_ver1/Team 2_Mini Project/match_register.html
@@ -17,6 +17,12 @@
         margin-top: 70px;
         margin-left : -50px;
       }
+
+      #match_button{
+        position : relative;
+        left : 600px;
+        margin-bottom : 15px;
+      }
     </style>
   </head>
 
@@ -70,6 +76,7 @@
         <div id="center_line">
           <div id="notification_main">
            <h2 style="  font-family: KorUL; color :#8B2331; margin-top : 50px; margin-left:50px; font-size : 40px;">매치 신청</h2><br>
+          <div id=match_button> <input type="button" name="board_write" value="  글작성  "> </div>
            <div id=line1> </div>
               <table id="table1" border="1" width="700" align="center" cellspacing="0">
                 <thead>
