--- a/Team 2_Mini Project/login_ver1.html
+++ b/Team 2_Mini Project/login_ver1.html
@@ -3,27 +3,29 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Login</title>
-  <link rel="stylesheet" href="css/index_style.css">
+  <title>KUMATCH 로그인</title>
+  <link rel="stylesheet" href="css/basic_layout_style.css">
+  <link rel="stylesheet" href="css/login_style.css">
   <link rel="stylesheet" href="KU_B/font.css">
   <link rel="stylesheet" href="KU_L/font.css">
   <link rel="stylesheet" href="KU_M/font.css">
-  <link rel="stylesheet" href="css/login_style.css">
+
 </head>
 
 <body>
-  <header>
-    <div id="grid_index">
-      <div><img id="home_button" src="img/CollogeSymbol.jpg" href="#"></div>
-      <div class="titletext"><h1>KUMATCH</div></h1>
-      <div id="login_choice">
-            <a href="login_ver1.html" onclick="">로그인</a>
-          <span id=login_or>또는</span>
-          <a href="signup_form" onclick="">회원가입</a>
+  <div class="wrapper_1">
+    <header>
+      <div id="grid_index">
+        <a href="basic_layout.html"><img id="home_button" src="img/CollogeSymbol.jpg" href="#"></a>
+        <div class="titletext"><h1><a href="basic_layout.html" style="text-decoration: none;color: #8B2331;">KUMATCH</a></h1></div>
+        <div id="login_choice">
+            <a href="login_ver1.html" style="text-decoration: none;">로그인</a>
+            <span id=login_or>또는</span>
+            <a href="sign_up.html" style="text-decoration: none;">회원가입</a>
+        </div>
+        <span style="font-size:30px;cursor:pointer" onclick="openNav()"><img id="menu_button" src="img/personal_settings.png"></span>
       </div>
-      <div><img id="menu_button" src="img/list_icon.png" href="#"></div>
-    </div>
-  </header>
+    </header>
 
   <nav id="grid_login">
     <img id="aside_img_login" src="img/football.jpg">
@@ -36,25 +38,65 @@
         <form action="#" method="post">
           <div class="input_email">
             <label style="font-size:15px;">ID 또는 이메일</label><br>
-            <input type="text" id="username" name="username" value=""><br><br><br>
+            <input type="email" id="username" name="username" placeholder="@korea.ac.kr" style="font-size:15px;"><br><br><br>
           </div>
           <div class="input_pw">
             <label style="font-size:15px;">비밀번호</label><br>
-            <input type="text" id="password"name="password" value=""><br><br><br><br>
+            <input type="password" id="password"name="password" placeholder="PW"><br><br><br><br>
           </div>
           <input type="submit" name="login_button" id="login_button" value="로그인"><br><br><br>
       </form>
       </div>
-      <div class="pw_forgot">
-        <form action="#" method="method">
-        <ul>
-          <li>비밀번호가 기억나지 않으신가요?<input type="submit" name="find_pw" id="find_pw" value="비밀번호찾기"></li><br>
-          <li>아직 회원이 아니신가요?<input type="submit" name="sign_up" id="sign_up" value="회원가입"></li>
-        </ul>
-      </form>
+      <div class="login_bottom_box">
+        <form class="" action="basic_layout.html" method="post">
+        <table width="430" align ="center">
+          <tr>
+            <td>비밀번호가 기억나지 않으신가요?</td>
+            <td align="center"><input type="submit" name="find_pw" id="find_pw" value="비밀번호찾기"></td>
+          </tr>
+        </form>
+        <form class="" action="sign_up.html" method="post">
+          <tr>
+            <td>아직 회원이 아니신가요?</td>
+            <td align="center"><input type="submit" name="sign_up" id="sign_up" value="회원가입"></td>
+          </tr>
+        </table>
+    </form>
       </div>
     </div>
-  <nav>
+  </nav>
+
+  <aside>
+    <div id="mySidenav" class="sidenav">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a><br><br><br>
+      <div id="match_condition"><a href="my_matchlist.html"><img id="football_img" src="img/football.png">  나의 경기 현황</a></div><br><br>
+      <div id="modify_my_info"><a href="personal_info_modification.html"><img id="settings_img" src="img/settings.png">  정보 수정</a></div><br><br>
+      <div id="manage_team"><a href="team_manage.html"><img id="team_img" src="img/team.png">  팀 관리</a></div><br><br>
+      <div id="sns"><a href="https://www.instagram.com/" target="_blank"><img id="instagram_img" src="img/instagram.png"></a>
+                    <a href="https://www.facebook.com/" target="_blank"><img id="facebook_img" src="img/facebook.png"></a></div>
+      <div id="logo" style="text-align:center; font-family:KorUB; font-size:40px; color:#8B2331;">KUMATCH</a>
+    </div>
+
+    <script>
+    function openNav() {
+        document.getElementById("mySidenav").style.width = "250px";
+    }
+
+    function closeNav() {
+        document.getElementById("mySidenav").style.width = "0";
+    }
+    </script>
+    </div>
+  </aside>
+</div>
+
+  <footer>
+    <br><br>
+    <span>[30019] 세종특별자치시 세종로 2511 고려대학교 세종캠퍼스</span>
+    <span> T. 044-860-1114</span>
+    <span> F. 044-860-1048</span>
+      <p style="color:#C7B9AB;">Copyright ⓒ <span style="color:#FF661B;">KOREA University Sejong Campus</span> All Rights Reserved</p>
+  </footer>
 
 
 <!--
