--- a/KUMATCH_JYL_200722/Team 2_Mini Project/sign_up.html
+++ b/KUMATCH_JYL_200722/Team 2_Mini Project/sign_up.html
@@ -62,16 +62,14 @@
             </tr>
             <tr>
               <td>
+                  <label>닉네임</label><br>
+                  <input type="text" id="nickname" name="nickname">
+              </td>
+              <td>
                   <label>휴대폰 번호</label><br>
                   <input type="tel" id="mobile_num" name="mobile_num" placeholder="010-1234-5678" style="font-size:15px;">
               </td>
-              <td>
-                  <label>성별</label><br>
-                  <select id="gender" name="gender">
-                    <option value="basic">선택</option>
-                    <option value="male">남성</option>
-                    <option value="female">여성</option>
-              </td>
+
 
             </tr>
             <tr>
@@ -229,7 +227,14 @@
               </td>
             </tr>
             <tr>
-              <td colspan="2">
+              <td>
+                  <label>성별</label><br>
+                  <select id="gender" name="gender">
+                    <option value="basic">선택</option>
+                    <option value="male">남성</option>
+                    <option value="female">여성</option>
+              </td>
+              <td>
                 <label>선호 포지션</label><br>
                 <div class="choice_position">
                 <input type="checkbox" id="position" name="position" value="GK">GK
