--- a/KUMATCH_JYL_200722/Team 2_Mini Project/basic_layout.html
+++ b/KUMATCH_JYL_200722/Team 2_Mini Project/basic_layout.html
@@ -40,7 +40,7 @@
 
       <nav>
           <a href="notification_board.html">공지사항</a>
-          <a href="introduction_base.html" class="is-current">KUMATCH 소개</a>
+          <a href="introduction.html" class="is-current">KUMATCH 소개</a>
           <a href="board_main.html">커뮤니티</a>
         <div class="nav-underline"></div>
       </nav>
@@ -119,7 +119,7 @@
             </div>
             <button id="prev-btn">prev</button>
             <button id="next-btn">next</button>
-            <span><a href="my_matchlist.html"><input type="button" id="match_register" name="match_register" value="매치 등록하기"></a></span>
+            <span><a href="match_register.html"><input type="button" id="match_register" name="match_register" value="매치 등록하기"></a></span>
         </section>
         <script src="js/slide_1.js"></script></div>
   </div>
