--- a/KUMATCH_JYL_200722/Team 2_Mini Project/login_ver1.html
+++ b/KUMATCH_JYL_200722/Team 2_Mini Project/login_ver1.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>KUMATCH 로그인</title>
   <link rel="stylesheet" href="css/basic_layout_style.css">
   <link rel="stylesheet" href="css/login_style.css">
