--- a/KUMATCH_JYL_200722/Team 2_Mini Project/match_register.html
+++ b/KUMATCH_JYL_200722/Team 2_Mini Project/match_register.html
@@ -17,6 +17,12 @@
         margin-top: 70px;
         margin-left : -50px;
       }
+      #aside_img_login {
+        margin-top: 100px;
+        padding-bottom: 100px;
+      }
+
+
     </style>
   </head>
 
@@ -37,7 +43,7 @@
 
       <nav>
           <a href="notification_board.html">공지사항</a>
-          <a href="introduction_base.html" class="is-current">KUMATCH 소개</a>
+          <a href="introduction.html" class="is-current">KUMATCH 소개</a>
           <a href="board_main.html">커뮤니티</a>
         <div class="nav-underline"></div>
       </nav>
@@ -95,6 +101,15 @@
           </div>
         </div>
     </nav>
+  </div>
+
+  <footer style="font-size:16px;">
+    <br><br>
+    <span>[30019] 세종특별자치시 세종로 2511 고려대학교 세종캠퍼스</span>
+    <span> T. 044-860-1114</span>
+    <span> F. 044-860-1048</span>
+      <p style="color:#C7B9AB;">Copyright ⓒ <span style="color:#FF661B;">KOREA University Sejong Campus</span> All Rights Reserved</p>
+  </footer>
 
   </body>
 </html>
