--- a/KUMATCH_JYL_200722/Team 2_Mini Project/my_matchlist.html
+++ b/KUMATCH_JYL_200722/Team 2_Mini Project/my_matchlist.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>나의 경기 현황</title>
   <link rel="stylesheet" href="css/basic_layout_style.css">
   <link rel="stylesheet" href="css/login_style.css">
@@ -57,7 +58,7 @@
       <table width ="1000">
         <tr align ="center">
           <td width="1500" style="font-size:25px; font-family : KorHB; padding : 15px;">내가 등록한 경기</td>
-          <td><span><a href="#"><input type="button" id="match_register" name="match_register" value="매치 등록하기"></a></span></td>
+          <td><span><a href="match_register.html"><input type="button" id="match_register" name="match_register" value="매치 등록하기"></a></span></td>
         </tr>
       </table>
 
