--- a/KUMATCH_JYL_200722/Team 2_Mini Project/team_manage.html
+++ b/KUMATCH_JYL_200722/Team 2_Mini Project/team_manage.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>팀관리</title>
   <link rel="stylesheet" href="css/basic_layout_style.css">
   <link rel="stylesheet" href="css/login_style.css">
@@ -28,6 +29,10 @@
     #underline1{
       border-bottom: 2px solid #C7B9AB;
       margin-bottom : 20px;
+    }
+
+    #aside_img_login {
+      padding-bottom: 100px;
     }
 
   </style>
