--- a/KUMATCH_JYL_200722/Team 2_Mini Project/board_main.html
+++ b/KUMATCH_JYL_200722/Team 2_Mini Project/board_main.html
@@ -71,7 +71,7 @@
 
       <nav>
           <a href="notification_board.html">공지사항</a>
-          <a href="introduction_base.html" class="is-current">KUMATCH 소개</a>
+          <a href="introduction.html" class="is-current">KUMATCH 소개</a>
           <a href="board_main.html">커뮤니티</a>
         <div class="nav-underline"></div>
       </nav>
