게시판오류, 풋살 단어 삭제
게시판, 소개페이지 풋살 단어 삭제

--- a/장고_0723_최종버전테스트/static/introduction_page.html
+++ b/장고_0723_최종버전테스트/static/introduction_page.html
@@ -92,7 +92,7 @@
     <br>
 
     <nav>
-      <span id="introtext3" style="font-weight:light;color:#555559; font-family: KorUB; font-size : 30px;">축구&풋살하고 싶을 땐!</span><br>
+      <span id="introtext3" style="font-weight:light;color:#555559; font-family: KorUB; font-size : 30px;">축구하고 싶을 땐!</span><br>
       <span id="introtext2" style="font-family:KorUB;font-weight:bold;color:#8B2331; font-family: KorUB; font-size : 40px;">KUMATCH</span>
     </nav>
 
